# SWCompression

./: meson.build
Sources/: meson.build
Sources/ZIP/: LittleEndianByteReader+Zip.swift
subprojects/: bitbytedata.wrap
