bitbytedata_dep = subproject('bitbytedata').get_variable('bitbytedata_dep')
swcompression_lib = static_library(
    'SWCompression',
    'Common/Archive.swift',
    'Common/CheckSums.swift',
    'Common/CodingTree/Code.swift',
    'Common/CodingTree/CodeLength.swift',
    'Common/CodingTree/DecodingTree.swift',
    'Common/CodingTree/EncodingTree.swift',
    'Common/CompressionAlgorithm.swift',
    'Common/CompressionMethod.swift',
    'Common/Container/Container.swift',
    'Common/Container/ContainerEntry.swift',
    'Common/Container/ContainerEntryInfo.swift',
    'Common/Container/ContainerEntryType.swift',
    'Common/Container/DosAttributes.swift',
    'Common/Container/Permissions.swift',
    'Common/DataError.swift',
    'Common/DecompressionAlgorithm.swift',
    'Common/DeltaFilter.swift',
    'Common/Extensions.swift',
    'Common/FileSystemType.swift',
    '7-Zip/7zCoder+Equatable.swift',
    '7-Zip/7zCoder.swift',
    '7-Zip/7zCoderInfo.swift',
    '7-Zip/7zContainer.swift',
    '7-Zip/7zEntry.swift',
    '7-Zip/7zEntryInfo.swift',
    '7-Zip/7zError.swift',
    '7-Zip/7zFileInfo.swift',
    '7-Zip/7zFolder.swift',
    '7-Zip/7zHeader.swift',
    '7-Zip/7zPackInfo.swift',
    '7-Zip/7zProperty.swift',
    '7-Zip/7zStreamInfo.swift',
    '7-Zip/7zSubstreamInfo.swift',
    '7-Zip/CompressionMethod+7z.swift',
    '7-Zip/MsbBitReader+7z.swift',
    'BZip2/BZip2+BlockSize.swift',
    'BZip2/BZip2+Compress.swift',
    'BZip2/BZip2+Lengths.swift',
    'BZip2/BZip2.swift',
    'BZip2/BZip2Error.swift',
    'BZip2/BurrowsWheeler.swift',
    'BZip2/SuffixArray.swift',
    'Deflate/Deflate+Compress.swift',
    'Deflate/Deflate+Constants.swift',
    'Deflate/Deflate+Lengths.swift',
    'Deflate/Deflate.swift',
    'Deflate/DeflateError.swift',
    'GZip/FileSystemType+Gzip.swift',
    'GZip/GzipArchive.swift',
    'GZip/GzipError.swift',
    'GZip/GzipHeader+ExtraField.swift',
    'GZip/GzipHeader.swift',
    'LZ4/LZ4+Compress.swift',
    'LZ4/LZ4.swift',
    'LZ4/XxHash32.swift',
    'LZMA/LZMA.swift',
    'LZMA/LZMABitTreeDecoder.swift',
    'LZMA/LZMAConstants.swift',
    'LZMA/LZMADecoder.swift',
    'LZMA/LZMAError.swift',
    'LZMA/LZMALenDecoder.swift',
    'LZMA/LZMAProperties.swift',
    'LZMA/LZMARangeDecoder.swift',
    'LZMA2/LZMA2.swift',
    'LZMA2/LZMA2Decoder.swift',
    'LZMA2/LZMA2Error.swift',
    'TAR/ContainerEntryType+Tar.swift',
    'TAR/Data+Tar.swift',
    'TAR/LittleEndianByteReader+Tar.swift',
    'TAR/TarContainer.swift',
    'TAR/TarCreateError.swift',
    'TAR/TarEntry.swift',
    'TAR/TarEntryInfo.swift',
    'TAR/TarError.swift',
    'TAR/TarExtendedHeader.swift',
    'TAR/TarHeader.swift',
    'TAR/TarParser.swift',
    'TAR/TarReader.swift',
    'TAR/TarWriter.swift',
    'XZ/ByteReader+XZ.swift',
    'XZ/Sha256.swift',
    'XZ/XZArchive.swift',
    'XZ/XZBlock.swift',
    'XZ/XZError.swift',
    'XZ/XZStreamHeader.swift',
    'ZIP/BuiltinExtraFields.swift',
    'ZIP/CompressionMethod+Zip.swift',
    'ZIP/FileSystemType+Zip.swift',
    'ZIP/LittleEndianByteReader+Zip.swift',
    'ZIP/ZipCentralDirectoryEntry.swift',
    'ZIP/ZipContainer.swift',
    'ZIP/ZipEndOfCentralDirectory.swift',
    'ZIP/ZipEntry.swift',
    'ZIP/ZipEntryInfo.swift',
    'ZIP/ZipEntryInfoHelper.swift',
    'ZIP/ZipError.swift',
    'ZIP/ZipExtraField.swift',
    'ZIP/ZipLocalHeader.swift',
    'Zlib/ZlibArchive.swift',
    'Zlib/ZlibError.swift',
    'Zlib/ZlibHeader.swift',
    dependencies: bitbytedata_dep,
)
swcompression_dep = declare_dependency(
    link_with: swcompression_lib,
    dependencies: bitbytedata_dep,
)
